nana/jano/jano-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jano
  labels:
    app: jano-dj
  name: jano-dj
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: jano-dj
  type: NodePort
status:
  loadBalancer: {}
