nana/jano/jano-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jano-dj
  namespace: jano
  labels:
    app: jano-dj
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jano-dj
            port:
              number: 8080
